<resources>
    <string name="app_name">ManillasXYZ</string>
    <string name="ordenar">Ordene aquí su manilla</string>
    <string name="material">Material</string>
    <string name="dije">Dije</string>
    <string name="tipo">Tipo</string>
    <string name="moneda">Moneda</string>
    <string name="cantidad">Cantidad</string>
    <string name="orden">Ordenar ahora!</string>
    <string name="totalpagar">Total a Pagar</string>
    <string name="cuero">Cuero</string>
    <string name="cuerda">Cuerda</string>
    <string name="martillo">Martillo</string>
    <string name="ancla">Ancla</string>
    <string name="oro">Oro</string>
    <string name="oro_rosado">Oro Rosado</string>
    <string name="plata">Plata</string>
    <string name="niquel">Niquel</string>
    <string name="dolares">USD</string>
    <string name="pesos">COP</string>
    <string-array name="materialOP">
        <item>@string/cuero</item>
        <item>@string/cuerda</item>
    </string-array>
    <string-array name="dijeOP">
        <item>@string/martillo</item>
        <item>@string/ancla</item>
    </string-array>
    <string-array name="tipOP">
        <item>@string/oro</item>
        <item>@string/oro_rosado</item>
        <item>@string/plata</item>
        <item>@string/niquel</item>
    </string-array>
    <string-array name="monedaOP">
        <item>@string/dolares</item>
        <item>@string/pesos</item>
    </string-array>
    <string name="error_vacio">Ingrese  cantidad de manillas a comprar</string>
    <string name="error_negativo">Cantidad ingresada incorrecta</string>
</resources>
